Changed correct mapping in boat_info view Added trait for UUID in routes

--- a/app/de/htwg/seapal/web/views/content/boat_info.scala.html
+++ b/app/de/htwg/seapal/web/views/content/boat_info.scala.html
@@ -27,58 +27,58 @@
 					<div class="input-wrapper" id="boat_input">
 						<div class="row">
 							<div class="span4">
-								<label for="boat_name">Bootsname</label> 
-								<input type="text" name="boat_name" tabindex="1" required />
+								<label for="boatName">Bootsname</label> 
+								<input type="text" name="boatName" tabindex="1" required />
 							</div>
 							<div class="span4">
-								<label for="boat_type">Typ</label>
-								<input type="text" name="boat_type" tabindex="9" />
+								<label for="type">Typ</label>
+								<input type="text" name="type" tabindex="9" />
 							</div>
 							<div class="span4">
-								<label for="build_year">Baujahr</label>
-								<input type="number" name="build_year" tabindex="17" min="1900" />
+								<label for="yearOfConstruction">Baujahr</label>
+								<input type="number" name="yearOfConstruction" tabindex="17" min="1900" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="span4">
-								<label for="register_nr">Registernr.</label>
-								<input type="number" name="register_nr" tabindex="2" />
+								<label for="registerNr">Registernr.</label>
+								<input type="number" name="registerNr" tabindex="2" />
 							</div>
 							<div class="span4">
 								<label for="constructor">Konstrukteur</label>
 								<input type="text" name="constructor" tabindex="10" />
 							</div>
 							<div class="span4">
-								<label for="engine">Motor</label>
-								<input type="text" name="engine" tabindex="18" />
+								<label for="motor">Motor</label>
+								<input type="text" name="motor" tabindex="18" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="span4">
-								<label for="sail_sign">Segelzeichen</label>
-								<input type="text" name="sail_sign" tabindex="3" />
+								<label for="sailSign">Segelzeichen</label>
+								<input type="text" name="sailSign" tabindex="3" />
 							</div>
 							<div class="span4">
-								<label for="boat_length">Länge</label>
-								<input type="number" name="boat_length" tabindex="11" min="0.1" step="0.1" />
+								<label for="length">Länge</label>
+								<input type="number" name="length" tabindex="11" min="0.1" step="0.1" />
 							</div>
 							<div class="span4">
-								<label for="fueltank_size">Tankgröße</label>
-								<input type="number" name="fueltank_size" tabindex="19" min="0" step="0.1"  />
+								<label for="tankSize">Tankgröße</label>
+								<input type="number" name="tankSize" tabindex="19" min="0" step="0.1"  />
 							</div>
 						</div>
 						<div class="row">
 							<div class="span4">
-								<label for="home_port">Heimathafen</label>
-								<input type="text" name="home_port" tabindex="4" />
+								<label for="homePort">Heimathafen</label>
+								<input type="text" name="homePort" tabindex="4" />
 							</div>
 							<div class="span4">
-								<label for="boat_width">Breite</label>
-								<input type="number" name="boat_width" tabindex="12" min="0.1" step="0.1" />
+								<label for="width">Breite</label>
+								<input type="number" name="width" tabindex="12" min="0.1" step="0.1" />
 							</div>
 							<div class="span4">
-								<label for="watertank_size">Wassertankgröße</label>
-								<input type="number" name="watertank_size" tabindex="20" min="0" step="0.1" />
+								<label for="freshWaterTankSize">Wassertankgröße</label>
+								<input type="number" name="freshWaterTankSize" tabindex="20" min="0" step="0.1" />
 							</div>
 						</div>
 						<div class="row">
@@ -87,12 +87,12 @@
 								<input type="text" name="yachtclub" tabindex="5" />
 							</div>
 							<div class="span4">
-								<label for="draught">Tiefgang</label>
-								<input type="number" name="draught" tabindex="13" min="0" step="0.1" />
+								<label for="darft">Tiefgang</label>
+								<input type="number" name="darft" tabindex="13" min="0" step="0.1" />
 							</div>
 							<div class="span4">
-								<label for="wastewatertank_size">Abwassertankgröße</label>
-								<input type="number" name="wastewatertank_size" tabindex="21" min="0" step="0.1" />
+								<label for="wasteWaterTankSize">Abwassertankgröße</label>
+								<input type="number" name="wasteWaterTankSize" tabindex="21" min="0" step="0.1" />
 							</div>
 						</div>
 						<div class="row">
@@ -101,12 +101,12 @@
 								<input type="text" name="owner" tabindex="6" />
 							</div>
 							<div class="span4">
-								<label for="mast_height">Masthöhe</label>
-								<input type="number" name="mast_height" tabindex="14" min="0" step="0.1" />
+								<label for="mastHeight">Masthöhe</label>
+								<input type="number" name="mastHeight" tabindex="14" min="0" step="0.1" />
 							</div>
 							<div class="span4">
-								<label for="mainsail_size">Großsegelgröße</label>
-								<input type="number" name="mainsail_size" tabindex="22" min="0" step="0.1" />
+								<label for="mainSailSize">Großsegelgröße</label>
+								<input type="number" name="mainSailSize" tabindex="22" min="0" step="0.1" />
 							</div>
 						</div>
 						<div class="row">
@@ -115,26 +115,26 @@
 								<input type="text" name="insurance" tabindex="7" />
 							</div>
 							<div class="span4">
-								<label for="water_displacement">Verdrängung</label>
-								<input type="number" name="water_displacement" tabindex="15" min="0" step="0.1" />
+								<label for="displacement">Verdrängung</label>
+								<input type="number" name="displacement" tabindex="15" min="0" step="0.1" />
 							</div>
 							<div class="span4">
-								<label for="genua_size">Genuagröße</label>
-								<input type="number" name="genua_size" tabindex="23" min="0" step="0.1" />
+								<label for="genuaSize">Genuagröße</label>
+								<input type="number" name="genuaSize" tabindex="23" min="0" step="0.1" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="span4">
-								<label for="callsign">Rufzeichen</label>
-								<input type="text" name="callsign" tabindex="8" />
+								<label for="callSign">Rufzeichen</label>
+								<input type="text" name="callSign" tabindex="8" />
 							</div>
 							<div class="span4">
-								<label for="rig_kind">Rig-Art</label>
-								<input type="text" name="rig_kind" tabindex="16" />
+								<label for="rigging">Rig-Art</label>
+								<input type="text" name="rigging" tabindex="16" />
 							</div>
 							<div class="span4">
-								<label for="spi_size">Spigröße</label>
-								<input type="number" name="spi_size" tabindex="24" min="0" step="0.1" />
+								<label for="spiSize">Spigröße</label>
+								<input type="number" name="spiSize" tabindex="24" min="0" step="0.1" />
 							</div>
 						</div>
 						
@@ -157,11 +157,11 @@
 									    </tbody>
 									</table>
 									<script id="boatListTemplate" type="text/x-jsrender">
-										<tr data-boatid="{{>id}}">
-											<td>{{>boat_name}}</td>
-											<td>{{>register_nr}}</td>
-											<td>{{>boat_type}}</td>
-											<td>{{>build_year}}</td>
+										<tr data-boatid="{{>_id}}">
+											<td>{{>boatName}}</td>
+											<td>{{>registerNr}}</td>
+											<td>{{>type}}</td>
+											<td>{{>yearOfConstruction}}</td>
 											<td class="actionCol">
 												<a href="#" class="editBoadBtn tooltipable" rel="tooltip" title="Bearbeiten"><i class="icon-pencil"></i></a>
 												<a href="#" class="deleteBoadBtn tooltipable" rel="tooltip" title="Löschen"><i class="icon-remove"></i></a>
