--- a/app/de/htwg/seapal/web/views/content/boat_info.scala.html
+++ b/app/de/htwg/seapal/web/views/content/boat_info.scala.html
@@ -1,13 +1,13 @@
 @scripts = {
 	<script type="text/javascript" src="@de.htwg.seapal.web.controllers.routes.Application.javascriptRoutes"></script>
-	<script type="text/javascript" src="@routes.Assets.at("js/boat_info.min.js")"></script>
+	<script type="text/javascript" src="@routes.Assets.at("js/boat_info.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/jquery.paginatetable.js")"></script>
 	<script type="text/javascript" src="@routes.Assets.at("lib/jsrender.js")"></script>
 }
 
 @main("Boat Info", scripts, "withsubnavi") {
 @helper.form(action = de.htwg.seapal.web.controllers.routes.BoatAPI.addBoat() , 'id -> "form") {
-			<input type="hidden" id="idField" name="id" value="-1" />
+			<input type="hidden" id="idField" name="_id" value="" />
 			<div class="content-wrapper">
 				<div class="container">
 					<div class="row">
