Fixed controller and views of trip

--- a/app/de/htwg/seapal/web/views/content/trip_list.scala.html
+++ b/app/de/htwg/seapal/web/views/content/trip_list.scala.html
@@ -42,11 +42,11 @@
 									    </tbody>
 									</table>
 									<script id="tripListTemplate" type="text/x-jsrender">
-										<tr data-id="{{>id}}">
-											<td>{{>trip_title}}</td>
-											<td>{{>trip_from}}</td>
-											<td>{{>trip_to}}</td>
-											<td>{{>start_time}}</td>
+										<tr data-id="{{>_id}}">
+											<td>{{>name}}</td>
+											<td>{{>startLocation}}</td>
+											<td>{{>endLocation}}</td>
+											<td>{{>startTime}}</td>
 											<td class="actionCol">
 												<a href="#"  class="deleteItemBtn tooltipable" rel="tooltip" title="Löschen"><i class="icon-remove"></i></a>
 												<a href="#" class="editItemBtn tooltipable" rel="tooltip" title="Auswählen"><i class="icon-chevron-right"></i></a>
