--- a/app/de/htwg/seapal/web/views/content/boat_info.scala.html
+++ b/app/de/htwg/seapal/web/views/content/boat_info.scala.html
@@ -8,6 +8,7 @@
 @main("Boat Info", scripts, "withsubnavi") {
 @helper.form(action = de.htwg.seapal.web.controllers.routes.BoatAPI.addBoat() , 'id -> "form") {
 			<input type="hidden" id="idField" name="_id" value="" />
+			<input type="hidden" name="_rev" value="" />
 			<div class="content-wrapper">
 				<div class="container">
 					<div class="row">
