--- a/app/de/htwg/seapal/web/views/content/trip_info.scala.html
+++ b/app/de/htwg/seapal/web/views/content/trip_info.scala.html
@@ -155,8 +155,8 @@
 									</table>
 									<script id="waypointListTemplate" type="text/x-jsrender">
 										<tr data-id="{{>id}}">
-											<td>{{>entry_name}}</td>
-											<td>{{>position_lat}}, {{>position_lon}}</td>
+											<td>{{>name}}</td>
+											<td>{{>latitude}}, {{>longitude}}</td>
 											<td class="actionCol">
 												<a href="#" class="deleteItemBtn tooltipable" rel="tooltip" title="Löschen"><i class="icon-remove"></i></a>
 												<a href="#" class="editItemBtn tooltipable" rel="tooltip" title="Betrachten"><i class="icon-chevron-right"></i></a>
