--- a/app/de/htwg/seapal/web/views/content/boat_info.scala.html
+++ b/app/de/htwg/seapal/web/views/content/boat_info.scala.html
@@ -5,7 +5,7 @@
 	<script type="text/javascript" src="@routes.Assets.at("lib/jsrender.js")"></script>
 }
 
-@main("Boat Info", scripts, "withsubnavi") {
+@main("SeaPal - Boat Info", scripts, "withsubnavi") {
 @helper.form(action = de.htwg.seapal.web.controllers.routes.BoatAPI.addBoat() , 'id -> "form") {
 			<input type="hidden" id="idField" name="_id" value="" />
 			<input type="hidden" name="_rev" value="" />
@@ -14,127 +14,127 @@
 					<div class="row">
 						<div class="span8">
 							<div class="left">
-								<h1>Bootliste</h1>
+								<h1>Boat Info</h1>
 							</div>
 						</div>
 						<div class="span4">
 							<div class="right buttons_top">
-								<a id="addButton" class="btn btn-primary"><i class="icon-plus icon-white"></i> <span>Hinzufügen<span></a>
-								<input type="submit" id="submitBtn" class="btn btn-success" value="Speichern"/>
-								<a id="onwardButton" class="btn btn-inverse"><span>Weiter<span></a>
+								<a id="addButton" class="btn btn-primary"><i class="icon-plus icon-white"></i> <span>Add<span></a>
+								<input type="submit" id="submitBtn" class="btn btn-success" value="Save"/>
+								<a id="onwardButton" class="btn btn-inverse"><span>Select<span></a>
 							</div>
 						</div>
 					</div>
 					<div class="input-wrapper" id="boat_input">
 						<div class="row">
 							<div class="span4">
-								<label for="boatName">Bootsname</label> 
+								<label for="boatName">Boat Name</label> 
 								<input type="text" name="boatName" tabindex="1" required />
 							</div>
 							<div class="span4">
-								<label for="type">Typ</label>
+								<label for="type">Type</label>
 								<input type="text" name="type" tabindex="9" />
 							</div>
 							<div class="span4">
-								<label for="yearOfConstruction">Baujahr</label>
-								<input type="number" name="yearOfConstruction" tabindex="17" min="1900" />
+								<label for="yearOfConstruction">Year of Construction</label>
+								<input type="number" name="yearOfConstruction" tabindex="17" min="0" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="span4">
-								<label for="registerNr">Registernr.</label>
+								<label for="registerNr">Register No.</label>
 								<input type="number" name="registerNr" tabindex="2" />
 							</div>
 							<div class="span4">
-								<label for="constructor">Konstrukteur</label>
+								<label for="constructor">Constructor</label>
 								<input type="text" name="constructor" tabindex="10" />
 							</div>
 							<div class="span4">
-								<label for="motor">Motor</label>
+								<label for="motor">Engine</label>
 								<input type="text" name="motor" tabindex="18" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="span4">
-								<label for="sailSign">Segelzeichen</label>
+								<label for="sailSign">Sailing Sign</label>
 								<input type="text" name="sailSign" tabindex="3" />
 							</div>
 							<div class="span4">
-								<label for="length">Länge</label>
-								<input type="number" name="length" tabindex="11" min="0.1" step="0.1" />
+								<label for="length">Length</label>
+								<input type="number" name="length" tabindex="11" min="0.0" step="0.1" />
 							</div>
 							<div class="span4">
-								<label for="tankSize">Tankgröße</label>
+								<label for="tankSize">Tank Size</label>
 								<input type="number" name="tankSize" tabindex="19" min="0" step="0.1"  />
 							</div>
 						</div>
 						<div class="row">
 							<div class="span4">
-								<label for="homePort">Heimathafen</label>
+								<label for="homePort">Home Port</label>
 								<input type="text" name="homePort" tabindex="4" />
 							</div>
 							<div class="span4">
-								<label for="width">Breite</label>
-								<input type="number" name="width" tabindex="12" min="0.1" step="0.1" />
+								<label for="width">Width</label>
+								<input type="number" name="width" tabindex="12" min="0.0" step="0.1" />
 							</div>
 							<div class="span4">
-								<label for="freshWaterTankSize">Wassertankgröße</label>
+								<label for="freshWaterTankSize">Fresh Water Tank Size</label>
 								<input type="number" name="freshWaterTankSize" tabindex="20" min="0" step="0.1" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="span4">
-								<label for="yachtclub">Yachtclub</label>
+								<label for="yachtclub">Yacht Club</label>
 								<input type="text" name="yachtclub" tabindex="5" />
 							</div>
 							<div class="span4">
-								<label for="darft">Tiefgang</label>
+								<label for="darft">Draft</label>
 								<input type="number" name="darft" tabindex="13" min="0" step="0.1" />
 							</div>
 							<div class="span4">
-								<label for="wasteWaterTankSize">Abwassertankgröße</label>
+								<label for="wasteWaterTankSize">Waste Water Tank Size</label>
 								<input type="number" name="wasteWaterTankSize" tabindex="21" min="0" step="0.1" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="span4">
-								<label for="owner">Eigner</label>
+								<label for="owner">Owner</label>
 								<input type="text" name="owner" tabindex="6" />
 							</div>
 							<div class="span4">
-								<label for="mastHeight">Masthöhe</label>
+								<label for="mastHeight">Mast Height</label>
 								<input type="number" name="mastHeight" tabindex="14" min="0" step="0.1" />
 							</div>
 							<div class="span4">
-								<label for="mainSailSize">Großsegelgröße</label>
+								<label for="mainSailSize">Mainsail Size</label>
 								<input type="number" name="mainSailSize" tabindex="22" min="0" step="0.1" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="span4">
-								<label for="insurance">Versicherung</label>
+								<label for="insurance">Insurance</label>
 								<input type="text" name="insurance" tabindex="7" />
 							</div>
 							<div class="span4">
-								<label for="displacement">Verdrängung</label>
+								<label for="displacement">Displacement</label>
 								<input type="number" name="displacement" tabindex="15" min="0" step="0.1" />
 							</div>
 							<div class="span4">
-								<label for="genuaSize">Genuagröße</label>
+								<label for="genuaSize">Genua Size</label>
 								<input type="number" name="genuaSize" tabindex="23" min="0" step="0.1" />
 							</div>
 						</div>
 						<div class="row">
 							<div class="span4">
-								<label for="callSign">Rufzeichen</label>
+								<label for="callSign">Call Sign</label>
 								<input type="text" name="callSign" tabindex="8" />
 							</div>
 							<div class="span4">
-								<label for="rigging">Rig-Art</label>
+								<label for="rigging">Rigging</label>
 								<input type="text" name="rigging" tabindex="16" />
 							</div>
 							<div class="span4">
-								<label for="spiSize">Spigröße</label>
+								<label for="spiSize">Spi Size</label>
 								<input type="number" name="spiSize" tabindex="24" min="0" step="0.1" />
 							</div>
 						</div>
@@ -148,10 +148,10 @@
 										<thead>
 									        <tr>
 									        	<th>Name</th>
-									        	<th>Registernr.</th>
-									        	<th>Typ</th>
-									        	<th>Baujahr</th>
-									        	<th class="actionCol">Aktionen</th>
+									        	<th>Register No.</th>
+									        	<th>Type</th>
+									        	<th>Year</th>
+									        	<th class="actionCol">Activities</th>
 									        </tr>
 									    </thead>
 									    <tbody>
@@ -164,9 +164,9 @@
 											<td>{{>type}}</td>
 											<td>{{>yearOfConstruction}}</td>
 											<td class="actionCol">
-												<a href="#" class="editBoadBtn tooltipable" rel="tooltip" title="Bearbeiten"><i class="icon-pencil"></i></a>
-												<a href="#" class="deleteBoadBtn tooltipable" rel="tooltip" title="Löschen"><i class="icon-remove"></i></a>
-												<a href="#" class="selectBoatBtn tooltipable" rel="tooltip" title="Auswählen"><i class="icon-chevron-right"></i></a>
+												<a href="#" class="editBoadBtn tooltipable" rel="tooltip" title="Edit"><i class="icon-pencil"></i></a>
+												<a href="#" class="deleteBoadBtn tooltipable" rel="tooltip" title="Delete"><i class="icon-remove"></i></a>
+												<a href="#" class="selectBoatBtn tooltipable" rel="tooltip" title="Select"><i class="icon-chevron-right"></i></a>
 											</td>
 										</tr>
 									</script>
@@ -177,12 +177,12 @@
 							<div class="listview-buttons tablePager">
 								<div class="span6">
 									<div class="left">
-										<input type="button" class="btn prevPage" value="Vorheriger"/>
+										<input type="button" class="btn prevPage" value="Previous"/>
 									</div>
 								</div>
 								<div class="span6">
 									<div class="right ">
-										<input type="button" class="btn nextPage" value="Nächster"/>
+										<input type="button" class="btn nextPage" value="Next"/>
 									</div>
 								</div>
 							</div>
@@ -195,10 +195,10 @@
 		<div id="addSuccessModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="addSuccessModalLabel" aria-hidden="true">
 		  <div class="modal-header">
 		    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-		    <h3 id="addSuccessModalLabel">Erfolgreich!</h3>
+		    <h3 id="addSuccessModalLabel">Successful!</h3>
 		  </div>
 		  <div class="modal-body">
-		    <p>Die Daten wurden erfolgreich übermittelt!</p>
+		    <p>Data has been transmitted successfully!</p>
 		  </div>
 		  <div class="modal-footer">
 		    <button class="btn btn-primary" data-dismiss="modal" aria-hidden="true">OK</button>
@@ -208,14 +208,14 @@
 		<div id="deletePromptModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="deletePromptModalLabel" aria-hidden="true">
 		  <div class="modal-header">
 		    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-		    <h3 id="deletePromptModalLabel">Löschen</h3>
+		    <h3 id="deletePromptModalLabel">Delete</h3>
 		  </div>
 		  <div class="modal-body">
-		    <p>Möchten Sie wirklich das Boot (ID: <span></span>) löschen?</p>
+		    <p>Are you sure you want to delete the boot (ID: <span></span>)?</p>
 		  </div>
 		  <div class="modal-footer">
-		  	<button class="btn" data-dismiss="modal" aria-hidden="true">Abbrechen</button>
-    		<button class="btn btn-danger" id="deleteModalBtn" data-dismiss="modal">Löschen</button>
+		  	<button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+    		<button class="btn btn-danger" id="deleteModalBtn" data-dismiss="modal">Delete</button>
 		  </div>
 		</div>
 		
