--- a/app/de/htwg/seapal/web/views/content/trip_list.scala.html
+++ b/app/de/htwg/seapal/web/views/content/trip_list.scala.html
@@ -12,13 +12,13 @@
 					<div class="row">
 						<div class="span8">
 							<div class="left">
-								<h1>Tripliste @if(boatId == null){ aller Boote }</h1>
+								<h1>Trip List @if(boatId == null){ of all Boats }</h1>
 							</div>
 						</div>
 						<div class="span4">
 							@if(boatId != null){
 								<div class="right buttons_top">
-									<a id="addButton" href="@de.htwg.seapal.web.controllers.routes.Application.trip_add(boatId)" class="btn btn-primary"><i class="icon-plus icon-white"></i> <span>Hinzufügen<span></a>
+									<a id="addButton" href="@de.htwg.seapal.web.controllers.routes.Application.trip_add(boatId)" class="btn btn-primary"><i class="icon-plus icon-white"></i> <span>Add<span></a>
 								</div>
 							}
 						</div>
@@ -35,11 +35,11 @@
 										<thead>
 									        <tr>
 									        	<th></th>
-									        	<th>Titel</th>
-									        	<th>Von</th>
-									        	<th>Nach</th>
-									        	<th>Datum</th>
-									        	<th class="actionCol">Aktionen</th>
+									        	<th>Title</th>
+									        	<th>Start Location</th>
+									        	<th>End Location</th>
+									        	<th>Date</th>
+									        	<th class="actionCol">Activities</th>
 									        </tr>
 									    </thead>
 									    <tbody>
@@ -53,8 +53,8 @@
 											<td>{{>endLocation}}</td>
 											<td>{{>startTime}}</td>
 											<td class="actionCol">
-												<a href="#"  class="deleteItemBtn tooltipable" rel="tooltip" title="Löschen"><i class="icon-remove"></i></a>
-												<a href="#" class="editItemBtn tooltipable" rel="tooltip" title="Auswählen"><i class="icon-chevron-right"></i></a>
+												<a href="#"  class="deleteItemBtn tooltipable" rel="tooltip" title="Delete"><i class="icon-remove"></i></a>
+												<a href="#" class="editItemBtn tooltipable" rel="tooltip" title="Select"><i class="icon-chevron-right"></i></a>
 											</td>
 										</tr>
 									</script>
@@ -65,7 +65,7 @@
 							<div class="listview-buttons tablePager">
 								<div class="span12">
 									<div class="left">
-										<input type="submit" class="btn" value="Trips > Regatta Ansicht"/>
+										<input type="submit" class="btn" value="Trips > Regatta View"/>
 									</div>
 								</div>
 							</div>
@@ -74,12 +74,12 @@
 							<div class="listview-buttons tablePager">
 								<div class="span6">
 									<div class="left">
-										<input type="button" class="btn prevPage" value="Vorheriger"/>
+										<input type="button" class="btn prevPage" value="Previous"/>
 									</div>
 								</div>
 								<div class="span6">
 									<div class="right ">
-										<input type="button" class="btn nextPage" value="Nächster"/>
+										<input type="button" class="btn nextPage" value="Next"/>
 									</div>
 								</div>
 							</div>
@@ -91,14 +91,14 @@
 		<div id="deletePromptModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="deletePromptModalLabel" aria-hidden="true">
 		  <div class="modal-header">
 		    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-		    <h3 id="deletePromptModalLabel">Löschen</h3>
+		    <h3 id="deletePromptModalLabel">Delete</h3>
 		  </div>
 		  <div class="modal-body">
-		    <p>Möchten Sie wirklich diesen Trip (ID: <span></span>) löschen?</p>
+		    <p>Are you sure you want to delete the trip (ID: <span></span>)?</p>
 		  </div>
 		  <div class="modal-footer">
-		  	<button class="btn" data-dismiss="modal" aria-hidden="true">Abbrechen</button>
-    		<button class="btn btn-danger" id="deleteModalBtn" data-dismiss="modal">Löschen</button>
+		  	<button class="btn" data-dismiss="modal" aria-hidden="true">Cancel</button>
+    		<button class="btn btn-danger" id="deleteModalBtn" data-dismiss="modal">Delete</button>
 		  </div>
 		</div>
 }
