- implemented functionality to show a waypoint - Added API functions to load and show a single waypoint - Added info for regatta to the index page

--- a/app/de/htwg/seapal/web/views/content/index.scala.html
+++ b/app/de/htwg/seapal/web/views/content/index.scala.html
@@ -50,6 +50,21 @@
 					</div>
 				</div>
 				<div class="row">
+					<div class="span6 offset3">
+						<div class="round feature">
+							<h2 class="regatta">Sailing Regatta</h2>
+							<ul>
+								<li>The first regatta application for private usage</li>
+								<li>Challenge your friends on deep sea</li>
+								<li>Track your trips and analyze your sailing regatta using the outstanding SAP Sailing Analytics</li>
+								<li>Visualize your regattas in 2D and 3D</li>
+								<li>Matches perfect with Seapal for Android, iPhone and iPad</li>
+								<li>Manage your races and regatta courses using Google Maps</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="row">
 					<div class="span6">
 						<div class="round widebox">
 							<h2 class="extensions">Extensions</h2>
