--- a/app/de/htwg/seapal/web/views/content/trip_info.scala.html
+++ b/app/de/htwg/seapal/web/views/content/trip_info.scala.html
@@ -159,7 +159,7 @@
 											<td>{{>latitude}}, {{>longitude}}</td>
 											<td class="actionCol">
 												<a href="#" class="deleteItemBtn tooltipable" rel="tooltip" title="Delete"><i class="icon-remove"></i></a>
-												<!--<a href="#" class="editItemBtn tooltipable" rel="tooltip" title="Show"><i class="icon-chevron-right"></i></a>-->
+												<a href="#" class="editItemBtn tooltipable" rel="tooltip" title="Show"><i class="icon-chevron-right"></i></a>
 											</td>
 										</tr>
 									</script>
